<resources>
    <string name="app_name">Cards For Studying</string>
    <string name="developer_web_address">zakharov.nikolay.com</string>
    <string name="fictitious_meaning_word">Word</string>
    <string name="fictitious_meaning_word_transcription">|wɜːrd|</string>
    <string name="first_button_word">Слово</string>
    <string name="second_button_word">Мир</string>
    <string name="third_button_word">Фраза</string>
    <string name="fourth_button_word">Суслик</string>
    <string name="fictitious_word_translation_view">
        <string>\nсущ.: слово, текст, сообщение</string>
        <string>\nглаг.: выражать словами, формулировать</string>
    </string>
    <string name="fictitious_meaning_phrase">London is the capital of Great Britain</string>
    <string name="fictitious_transcription_phrase">Лондон - столица Великобритании</string>
    <string name="example">Пример</string>
    <string name="err_inDeveloping">В разарботке</string>
    <string name="err_empty_phrase_dictionary">Не найдено ни одной фразы в словаре</string>
    <string name="err_mListWordIsEmpty">Не найдено ни одного слова в словаре</string>
    <string name="err_empty_dictionary">В активном словаре меньше четырех слов</string>
    <string name="empty_dictionary">В активном словаре нет слов</string>
    <string name="fewer_than_four_on_dictionary">Для построения теста \nдолжно быть отмечено больше четырех слов</string>
    <string name="dictionary_name">Dictionary name</string>
    <string name="meaning_word">Meaning word</string>
    <string name="transcription_word">Transcription word</string>
    <string name="translation_word">Translation word</string>
    <string name="add_word_in_the_test">Add word in the test</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="correct_answer_message">Верно</string>
    <string name="incorrect_answer_message">Попробуй еще раз</string>
    <string name="title_activity_to_do_list">ToDoListActivity</string>
    <string name="drawer_dictionaries">Dictionaries</string>
    <string name="drawer_words_in_test">Words in test</string>
    <string name="drawer_about_developers">About Developer</string>
    <string name="drawer_language">Application language</string>
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_add">Add</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_open">Open</string>
    <string name="menu_back">Back</string>
    <string name="set_active">Set Active</string>
    <string name="first_start_file_name">firstStart</string>
    <string name="dictionary_fragment_title">Dictionaries</string>
    <string name="word_fragment_title">Words</string>
    <string name="add_new_word_title">Add new word</string>
    <string name="set_meaning_word">Write here your word</string>
    <string name="set_word_transcription">Write here transcription if it exists</string>
    <string name="set_translation_word">Write here translation word</string>
    <string name="set_example">Write here sentence with this word</string>
    <string name="in_test">Add word in the test</string>
    <string name="name_new_dictionaries">set name new dictionaries</string>
    <string name="phrase_fragment_title">Phrase</string>
    <string name="set_phrase_meaning">Write here your phrase</string>
    <string name="set_phrase_translation">Write here translation phrase</string>
    <string name="set_word_in_the_test">Word added to the test</string>
    <string name="remove_word_in_the_test">The word is excluded in the test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
