<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="4dp">

    <EditText
        android:id="@+id/set_meaning_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/set_meaning_word" />

    <EditText
        android:id="@+id/set_word_transcription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/set_word_transcription" />

    <EditText
        android:id="@+id/set_translation_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/set_translation_word" />

    <EditText
        android:id="@+id/set_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/set_example" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/in_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_test" />
</LinearLayout>