<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="4dp">

    <EditText
        android:id="@+id/set_phrase_meaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/set_phrase_meaning" />

    <EditText
        android:id="@+id/set_phrase_translation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/set_phrase_translation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_cancel" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_save" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>