<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/meaning_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meaning_word"
            android:paddingTop="16dp" />

        <EditText
            android:id="@+id/transcription_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transcription_word"
            android:paddingTop="16dp" />

        <EditText
            android:id="@+id/translation_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/translation_word"
            android:paddingTop="16dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingLeft="16dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_word_in_the_test" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>