<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:gravity="top|left|center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:src="@drawable/services" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:gravity="top|center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/word_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:paddingBottom="0dp"
                    android:paddingEnd="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:textColor="@android:color/black"
                    android:textSize="40sp"
                    android:textStyle="normal|bold"
                    tools:text="@string/fictitious_meaning_word" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|center">

                <TextView
                    android:id="@+id/word_transcription_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:paddingBottom="20dp"
                    android:paddingEnd="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingStart="20dp"
                    android:textSize="18sp"
                    tools:text="@string/fictitious_meaning_word_transcription" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top|center"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <Button
                    android:id="@+id/first_word_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="serif"
                    android:padding="0dp"
                    android:textSize="20sp"
                    tools:text="@string/first_button_word" />

                <Button
                    android:id="@+id/second_word_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="serif"
                    android:padding="0dp"
                    android:textSize="20sp"
                    tools:text="@string/second_button_word" />

                <Button
                    android:id="@+id/third_word_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="serif"
                    android:padding="0dp"
                    android:textSize="20sp"
                    tools:text="@string/third_button_word" />

                <Button
                    android:id="@+id/fourth_word_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="serif"
                    android:padding="0dp"
                    android:textSize="20sp"
                    tools:text="@string/fourth_button_word" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center|start|end"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/previous_button"
                android:layout_width="51dp"
                android:layout_height="61dp"
                android:background="@null"
                android:src="@drawable/arrow_left" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <ImageButton
                android:id="@+id/next_button"
                android:layout_width="51dp"
                android:layout_height="61dp"
                android:background="@null"
                android:src="@drawable/arrow_right" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
