<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="16dp">

    <!-- сменить на action bar (а может и нет) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="top|left|center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:src="@drawable/services" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/speech_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingRight="16dp"
            android:src="@drawable/ic_volume_mute_black_48dp" />

        <ImageButton
            android:id="@+id/in_test_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:src="@drawable/baseline_done_black_48" />

        <ImageButton
            android:id="@+id/edit_word_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:src="@drawable/outline_edit_black_48" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:gravity="top|center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/word_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="serif"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="normal|bold"
                tools:text="@string/fictitious_meaning_word" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center">

            <TextView
                android:id="@+id/word_transcription_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                tools:text="@string/fictitious_meaning_word_transcription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:paddingLeft="40dp">

            <TextView
                android:id="@+id/word_translation_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                tools:text="@string/fictitious_word_translation_view" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/example_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="serif"
            android:text="@string/example"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center|start|end"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/previous_button"
                android:layout_width="51dp"
                android:layout_height="61dp"
                android:background="@null"
                android:src="@drawable/arrow_left" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <ImageButton
                android:id="@+id/next_button"
                android:layout_width="51dp"
                android:layout_height="61dp"
                android:background="@null"
                android:src="@drawable/arrow_right" />
        </LinearLayout>
    </LinearLayout>


</FrameLayout>
